Add Sanity client, image URL builder, setup environment variables with dotenv, add data file for blog pages

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,6 @@
 ---
 layout: home.html
 ---
-
-<img
-  src="{{ '/images/BigLogo.svg' | url | bust }}"
-  alt="Data to Dev Collective Logo"
-/>
+<p>{{ blog.posts[1].title }}</p>
+<p>{{ blog.featured[0].featuredPost.title }}</p>
+<img src="{{ '/images/BigLogo.svg' | url | bust }}" alt="Data to Dev Collective Logo" />
